[tool.poetry]
name = "buying-frenzy"
version = "0.1.0"
description = ""
authors = ["Surbhi Sharma <ssurbhi560@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
black = "^22.1.0"
python-dotenv = "^0.19.2"
Flask-GraphQL = "^2.0.1"
graphene-sqlalchemy = "^2.3.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pytest = "^7.0.0"
python-dotenv = "^0.19.2"
coverage = "^6.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
